--- a/kudos/templates/company/signup.html
+++ b/kudos/templates/company/signup.html
@@ -3,5 +3,22 @@
 {% block title %} Signup {% endblock %}
 
 {% block body %}
-	<h1>Hello {{name}}</h1>
+	
+    <section id="company-signup">
+
+        <h1 id="logo">KUDOS</h1>
+        <div class="sign-form col-md-4 col-md-offset-4">
+            <div class="sign-form-head">
+                Signup and make your company happy
+            </div>
+
+
+            <form action='/company/signup/' method="POST" id="signup">
+                {% csrf_token %}
+                {{ form }}
+                <input class="btn" type="submit" value="Entrar" />
+            </form>
+        </div>
+    </section>
+
 {% endblock %}
