adds employee signup

--- a/kudos/static/css/main.css
+++ b/kudos/static/css/main.css
@@ -2,10 +2,10 @@ body {
     background: #EAEAEA;
 }
 
-#company-sign {
+/*#company-sign {
 	margin-top: 5%;
 }
-
+*/
 #logo {
     text-align: center;
     font-size: 60px;
