--- a/kudos/templates/company/login.html
+++ b/kudos/templates/company/login.html
@@ -16,7 +16,7 @@
             <form action='/company/login/' method="POST" id="sign">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input class="btn" type="submit" value="Entrar" />
+                <input class="btn" type="submit" value="Login" />
             </form>
         </div>
     </section>
