--- a/kudos/templates/base.html
+++ b/kudos/templates/base.html
@@ -14,4 +14,9 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+
+
+
+    <script type="text/javascript" src="{% static 'js/jquery-1.11.3.min.js'%}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js'%}"></script>
 </html>
